# ai-engineer-training

./: README.md
week04/: main.py  p11-模板.ipynb  p12-大模型.ipynb  p13-自定义输出解释器.ipynb  p14-链的解析.ipynb  p5-构建第一个对话链.ipynb  p9-封装为网络服务.ipynb  pyproject.toml
week04/p11/: custom_prompt_template_engineering.py  ext_template.py  simple_demo.py  test_template.py
week04/p12/: custom_vllm_wrapper.py  requirements.txt  vllm_config.py  vllm_demo.py
