[project]
name = "week04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-deepseek",
    "pydantic",
    "requests",
    "vllm",
    "aiohttp",
    "langserve[all]",
    "langsmith",
    "langgraph",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "dashscope",
    "httpx",
]